<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?buttonBarButtonStyle">

        <Button
            android:id="@+id/prevMonthButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev_month_button_text"
            android:onClick="jumpToPrevMonth"
            style="?buttonBarButtonStyle" />

        <TextView
            android:id="@+id/currentMonthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_month_text_view_text" />

        <Button
            android:id="@+id/nextMonthButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_month_button_text"
            android:onClick="jumpToNextMonth"
            style="?buttonBarButtonStyle" />
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />
</LinearLayout>