<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_add_tag_shape"
    android:orientation="vertical"
    android:showDividers="middle|beginning|end">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/activity_edit_tag_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_add_tag_title"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <EditText
            android:id="@+id/activity_edit_tag_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tag_name"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/activity_edit_tag_budget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/tag_limit"
                android:inputType="textPersonName|numberDecimal" />

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/activity_edit_tag_shortcut"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/leaf_btn_add_textcolor"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

        </LinearLayout>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tag_comment"
            android:inputType="textPersonName"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_add_tag_confirm"
            style="@style/btn_dialog_option"
            android:layout_height="wrap_content"
            android:text="@string/g_confirm" />

        <Button
            android:id="@+id/dialog_add_tag_cancel"
            style="@style/btn_dialog_option"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/g_cancel" />
    </LinearLayout>

</LinearLayout>